--- a/src/index.html
+++ b/src/index.html
@@ -39,11 +39,11 @@
         padding: 0;
         margin: 0;
         box-sizing: border-box;
-        font-family: "Nunito Sans";
+        font-family: 'Nunito Sans';
       }
 
       body {
-        font-family: "Nunito Sans";
+        font-family: 'Nunito Sans';
       }
 
       .container {
@@ -73,7 +73,7 @@
         padding-bottom: 2rem;
         font-size: 4rem;
         line-height: 0.9;
-        font-family: "Forum";
+        font-family: 'Forum';
       }
 
       p {
